iron-gallery/iron-db-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-db
  namespace: default
  labels:
    db: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      db: mariadb
  template:
    metadata:
      labels:
        db: mariadb
    spec:
      containers:
      - name: irongallery
        image: kodekloud/irondb:2.0
        volumeMounts:
        - name: db
          mountPath: '/var/lib/mysql'
      volumes:
      - name: db
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: iron-db-service
  namespace: default
spec:
  selector:
    db: mariadb
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
