iron-gallery/iron-gallery-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-gallery
  namespace: default
  labels:
    run: iron-gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      run: iron-gallery
  template:
    metadata:
      labels:
        run: iron-gallery
    spec:
      containers:
      - name: irongallery
        image: kodekloud/irongallery:2.0
        resources:
          limits:
            memory: "100Mi"
            cpu: "50m"
        volumeMounts:
        - name: config
          mountPath: '/usr/share/nginx/html/data'
        - name: images
          mountPath: '/usr/share/nginx/html/uploads'
      volumes:
      - name: config
        emptyDir: {}
      - name: images
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: iron-gallery-service
  namespace: default
spec:
  selector:
    run: iron-gallery
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30099
