iron-gallery/gallery-of-bravos-ingres.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: iron-gallery-ingress
  namespace: default
spec:
  rules:
  - host: iron-gallery-braavos.com
    http:
      paths:
      - path: /
        backend: 
          serviceName: iron-gallery-service
          servicePort: 30099
      - path: /weird
        backend: 
          serviceName: ingress-space
          servicePort: 80
